2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>
	
	* data/glade/PlaylistWindow.glade:
	* data/ui/NotificationAreaIcon.xml:
	* data/ui/PlaylistWindow.xml:
	* src/About.cs:
	* src/Actions.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Album.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/Config.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:
	* src/CoverImage.cs:
	* src/Database.cs:
	* src/DndUtils.cs:
	* src/EllipsizingLabel.cs:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/FileUtils.cs:
	* src/Global.cs:
	* src/GnomeProxy.cs:
	* src/HandleView.cs:
	* src/ImportDialog.cs:
	* src/InfoWindow.cs: 
	* src/Item.cs:
	* src/KeyUtils.cs:
	* src/MarkupUtils.cs:
	* src/Metadata.cs:
	* src/MmKeys.cs:
	* src/MuineDBusService.cs:
	* src/NoMusicFoundWindow.cs:
	* src/NotificationAreaIcon.cs:
	* src/OpenDialog.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/ProgressWindow.cs:
	* src/SaveDialog.cs:
	* src/SignalUtils.cs:
	* src/SkipToWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	* src/StockIcons.cs:
	* src/StringUtils.cs:
	* src/ThreadBase.cs:
	* src/VolumeButton.cs:
	* src/YesNoDialog.cs:
	
	Massive cleanup. Some minor actual code changes. Pretty much just
	re-organizing. Made a couple internal classes in SongDatabase into
	structs, most notably SignalRequest. Added some documentation and TODO
	notes (in individual files).

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* data/muine.schemas.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:
	
	Made min_query_length and fake_length settings in GConf per 
	AddSongWindow and AddAlbumWindow. Default for enable_speed_hacks is 
	'true' for AddSongWindow and 'false' for AddAlbumWindow. It's not setup
	quite right yet (I haven't really used GConf much before). I still need 
	to add GConfNotifyHandlers.

2005-01-10  Jorn Baayen  <jbaayen@gnome.org>
